* Adding MySQL Backup/Restore ability
* Adding indexes to data points table for performance
* No longer indenting JSON output from REST api, use rest.indentJSON=true env property to enable
* Improved COUNT query performance
* Scripting/Meta Javascript TIMESTAMP bugfix for Java 8
* No default colors in templates
* Improved permissions filtering via RQL Rest queries

*Version 2.7.12*
* ETag Support for caching pages
* Fixes to improve keeping Realtime Cache Up-to-date with Mango Point States
* Change H2 web console startup script to use same location as Mango's H2 database
* Added robots.txt to stop web crawling
* Changed data point permissions editing area to support more complex queries and null vs empty permissions
* Added support for Apache Cassandra point value storage (CassandraDB module required)
* Improved startup times on some databases with provisions made for improving all databases
* Adding a Serial Server socket bridge to accept incoming sockets and forward to serial ports
* Retrieve running data sources more efficiently
* Fix for aborted polls on polling data sources in systems with large amounts of alarms
* Bugfix to allow migration of JSON data SQL table
* Bugfix to prevent importing databaseSchemaVersion in JSON, causing database upgrade errors

*Version 2.7.10*
* Fixing bug in upgrade and create-tables scripts for MySQL

*Version 2.7.8*
* NoSQL Database env.property to change file access type for improved performance on various systems.
* Fixed bug in multi-threaded startup that would fail to initialze some data sources if the number of threads used was greater than the number of running data sources.
* Added JSON Data for custom data storage
* Replacing Spline plot type renderer on for JFree Image Chart to reduce artifacts on plots, Spline type lines are now rendered as Lines.

*Version 2.7.6*
* Adding db.nosql env properties to allow setting the location of the NoSQL data store